--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -26,7 +26,7 @@
     </div>
     <img id="uploaded-image" src="#" alt="Uploaded Image" />
     <div class="right-container">
-      <h2 id="thinking-text">Suggestions will load here...</h2>
+      <h2 id="thinking-text">Suggestions will appear here...</h2>
       <div class="image-grid">
         <div id="predicted-images">
         </div>
@@ -45,6 +45,7 @@
   <div class="spacing">
     <p><br> <br> <br> </p>
   </div>
+  <script src="https://cdn.jsdelivr.net/gh/alexcorvi/heic2any/dist/heic2any.js"></script>
   <script src="static/script.js"></script>
 </body>
 </html>
