--- a/web/static/styles.css
+++ b/web/static/styles.css
@@ -1,8 +1,8 @@
 body {
   font-family: 'Helvetica';
   margin-top: 100px;
-  margin-left: 20%;
-  margin-right: 20%;
+  margin-left: 100px;
+  margin-right: 100px;
   padding: 0;
 }
 
@@ -20,6 +20,7 @@ body {
 
 .container {
   margin-top: 120px;
+  height: 600px;
   top: 100px;
   display: flex;
   justify-content: space-around;
@@ -46,7 +47,6 @@ body {
 
 .dropzone {
   width: 52%;
-  height: 500px;
   border: 2px solid #000000;
   display: flex;
   justify-content: center;
