--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>What Plant Is This?</title>
   <link rel="stylesheet" href="static/styles.css">
+  <link rel="icon" type="image/png" href="https://images.squarespace-cdn.com/content/v1/64790f5777b5d772678cce83/6d71eaee-f825-4324-be9b-2def32469eac/Untitled+drawing+%2811%29.png?format=100w">
 </head>
 <body>
   <div class="header">
