--- a/web/static/styles.css
+++ b/web/static/styles.css
@@ -47,7 +47,7 @@ body {
 
 .dropzone {
   width: 52%;
-  height: 600px;
+  min-height: 500px;
   border: 2px solid #000000;
   display: flex;
   justify-content: center;
@@ -85,6 +85,7 @@ body {
   display: grid;
   row-gap: 1%;
   column-gap: 1%;
+  width: 100%;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(3, fr);
   position: relative; /* Set the container as a relative positioning context */
@@ -92,7 +93,7 @@ body {
 
 /* The predicted image */
 #predicted-images img {
-  width: 75%; 
+  width: 100%; 
   height: auto;
   display: block; 
   align-items: center;
@@ -137,8 +138,8 @@ visibility: visible; /* Show the tooltip on image hover */
 .image-caption {
   bottom: 0;
   left: 0;
-  width: 85%;
-  gap: 1%;
+  width: auto;
+  gap: 0%;
   padding: 10px;
   align-items: center;
   text-decoration: none; 
